--- a/운영체제/스레드, 프로세스, 동시성 문제.md
+++ b/운영체제/스레드, 프로세스, 동시성 문제.md
@@ -51,7 +51,7 @@ static int staticVar = 20; // 명시적 초기화로 data 영역에 위치
 
 <br><br><br>
 
-![alt text](image.png)
+![alt text](resource/image.png)
 
 - 프로세스는 기본적으로 최소 1개의 스레드 영역을 가지고 있음.
 - 각 프로세스는 별도의 주소 공간에서 실행되며, 한 프로세스는 다른 프로세스의 변수나 자료구조에 접근할 수 없음.
