이진 트리, 다중 인터럽트 추가

--- a/운영체제/시스템 호출.md
+++ b/운영체제/시스템 호출.md
@@ -13,6 +13,18 @@
 - 운영체제 서비스를 제공받을 수 있는 모드
 - 자원 접근 가능
 
+
+<br><br><br>
+
+### 사용자 모드에 비해 커널 모드가 비용이 더 큰 이유
+
+- 사용자 모드 -> 커널 모드로 전환될 때, 사용자가 사용하던 프로세스의 레지스터 및 스택을 저장해야 함
+- 기존에 사용하던 캐시가 모두 무효화되는 캐시 플러시가 발생할 수 있음
+- 기존에는 사용하던 프로세스의 메모리 주소만 접근할 수 있었지만, 이제는 모든 메모리 주소에 접근이 가능함으로 주소 탐색 시간에서 더 걸릴 수도 있음 _(TLB 캐시도 무효화 될 수 있고)_
+- 기존에는 유저 스택을 통해서 스택 메모리를 쌓았지만, 커널 모드에서는 커널 스택을 사용하므로 스택 전환이 필요
+- Mode Switching 외에도 커널 내부에서는 추가적인 보안 검사가 발생하기 때문에 사용자 모드에서의 명령어 호출보다 커널 모드에서의 명령어 호출이 더 많은 시간이 걸림
+- 커널 모드에서는 선점형 스케줄링의 영향을 받을 수도 있으므로 더 높은 우선순위의 인터럽트에 의해 실행순서가 밀릴 수 있음
+
 <br><br><br>
 
 ### 시스템 호출
