--- a/컴퓨터 구조/인터럽트.md
+++ b/컴퓨터 구조/인터럽트.md
@@ -34,3 +34,11 @@
 - 키보드가 인터럽트 요청을 했을 때 이렇게 동작해야 한다.
 - 마우스가 인터럽트 요청을 했을 때 이렇게 동작해야 한다.
 - 이도 결국 프로그램이기에 메모리에 적재되어 있음.
+
+<br><br><br>
+
+#### 다중 인터럽트 처리 방법
+
+1. 인터럽트가 처리중일 때에는 인터럽트 플래그를 0으로 두어서 인터럽트를 실행할 수 없음을 밝힘 
+- 시스템 운영상 중요한 프로그램이나 도중에 중단할 수 없는 데이터 입출력 동작 등을 위한 인터럽트를 처리하는데 사용
+2. 인터럽트마다 우선순위를 할당하여 우선순위가 더 높은 인터럽트가 들어올경우 실행
