--- a/운영체제/스레드, 프로세스, 동시성 문제.md
+++ b/운영체제/스레드, 프로세스, 동시성 문제.md
@@ -14,6 +14,18 @@
 
 <br><br><br>
 
+### 프로세스 상태
+
+- 생성 상태 : 이제 막 메모리에 적재되어 PCB를 할당받은 상태
+- 준비 상태 : 당장이라도 CPU를 할당받아 실행할 수 있지만, 자신의 차례가 아니기 때문에 기다리는 상태
+- 실행 상태 : CPU를 할당받아 실행 중인 상태. 할당된 시간 모두 사용 시 준비 상태로 돌아가며, 입출력 장치를 사용하면 입출력 작업이 끝날 때 까지 대기상태가 됨
+- 대기 상태 : 프로세스가 실행 도중 입출력 장치를 사용하는 경우. 입출력 작업은 CPU에 비해 느리기에 대기 상태로 접어듬. 작업이 끝나면 준비 상태로 변경
+- 종료 상태 : 프로세스가 종료된 상태. PCB, 프로세스 메모리 영역 정리
+
+![alt text](resource/image-6.png)
+
+<br><br><br>
+
 ### 프로세스의 메모리 영역
 
 - 프로세스는 각각 독립적인 (코드, 데이터, 힙, 스택) 영역을 갖게된다.
@@ -65,7 +77,7 @@ static int staticVar = 20; // 명시적 초기화로 data 영역에 위치
 - 프로세스의 특정한 수행 경로
 - 프로세스가 할당받은 자원을 이용하는 실행의 단위
 
-![alt text](image-1.png)
+![alt text](resource/image-1.png)
 
 - 프로세스에서 할당받은 자원 중에 스택과 레지스터를 빼고 다른 영역은 공유.
 
