Hash Load Factor 추가

--- a/자료구조/해쉬.md
+++ b/자료구조/해쉬.md
@@ -19,3 +19,15 @@
 - 해쉬 충돌이 일어났을 때 그 다음 인덱스에 삽입을 하는 이 원리에서, 중간 징검다리를 해주던 값이 사라지면 값이 있어도 없다고 판별할 수도 있음
 - 값이 삭제되었을 때 실제로 값이 삭제되는 Hard Delete가 아닌 Soft Delete 문제 해결할 수 있음. 단점으로는 soft delete된 값을 만나면 무조건 다음 위치를 확인해야 함
 - 값이 삭제되었을 때 그 다음 항의 값을 해당 인덱스로 끌고옴. 삭제가 일어날 때 마다 추가 연산이 발생
+
+<br><br><br>
+
+### Load Factor
+
+- Load Factor (부하율) = 현재 저장된 요소 / 해쉬 테이블 크기
+- 해쉬 테이블이 너무 가득 차면 충돌이 증가하고 성능이 저하됨
+- 자바에서는 기본적으로 부하율이 0.75를 넘으면 Hash Table의 크기를 2배로 증가시킴
+- HashTable의 경우 기본 크기가 11이며, Load Factor가 0.75를 넘어갈 때마다 *2 +1을 수행함
+`11 -> 23 -> 47 -> 95...`
+- HashMap의 경우 기본 크기가 16이며, Load FActor가 0.75를 넘어갈 때마다 *2를 수행함
+`16 -> 32 -> 64 -> 128...`
