--- a/운영체제/캐시.md
+++ b/운영체제/캐시.md
@@ -54,3 +54,25 @@
 
 - First In First Out
 - 가장 먼저 들어온 메모리를 제거
+
+<br><br><br>
+
+### 멀티 코어 시스템에서 캐시의 일관성을 보장하는 방법
+
+- 주로 MESI 프로토콜을 이용해 일관성 유지
+- Modified : 해당 메모리가 현재의 캐시 메모리에만 있음. 메모리와 내용 불일치
+- Exclusive : 해당 메모리가 하나의 캐시 메모리에만 있음. 메모리와 내용 일치
+- Shared : 해당 메모리가 여러 캐시 메모리에 있음. 메모리와 내용 일치
+- Invalide : 다른 캐시에서 해당 메모리에 쓰기 동작을 하였음. 유효하지 않은 데이터
+
+1. 메모리의 X 라는 데이터가 공유 데이터라고 가정, 코어는 A,B 2개가 있다고 가정
+2. 먼저 코어 A에서 X를 요청 -> 캐시 미스이므로 메모리에서 캐시 A에 X 적재 _(캐시 A에만 X가 존재하므로 Exclusive)_
+3. 코어 B에서도 X를 요청 -> 캐시 미스이므로 메모리에서 캐시 B에 X 적재 _(캐시 A, 캐시 B 두 군데에서 사용되므로 둘 다 Shared로 변경됨)_
+4. 코어 A에서 X 데이터 변경 -> 쓰기 작업이 들어갔으므로 캐시 A에 있는 X는 Modified로 바뀌고, 캐시 B에 있는 X는 Invalid로 바뀜
+5. 코어 B에서 X를 요청했을 경우 -> Invalid이므로 캐시 미스 이므로 메모리에 데이터 요청 -> 
+캐시 A의 Modified에서 이 요청에 응답하여 캐시 A에 있던 수정된 데이터를 메모리에 올린 뒤 상태를 Sahred로 변경, 캐시 B도 수정된 데이터를 받은 뒤 Shared로 변경
+
+#### 어떻게 캐시 A에서 캐시 B가 데이터를 요청하는 것을 알아차렸을까 ?
+
+- 메모리에 접근하거나 요청할 때, 메모리 주소가 주소 버스를 통해 전체 캐시로 브로드캐스팅됨
+- 다른 코어의 캐시들도 해당 메모리 주소를 가지고 있는 지 체크하면서 일관성을 유지
