--- a/운영체제/메모리.md
+++ b/운영체제/메모리.md
@@ -89,6 +89,16 @@
 
 <br><br><br>
 
+### MMU
+
+- Memory Management Unit
+- 가상 메모리를 물리 메모리로 변경해주는 하드웨어 장치
+- CPU와 RAM사이에 위치, 내부적으로 PTBR과 TLB를 활용하여 가상 메모리를 물리 메모리로 매핑
+- 프로세스가 잘못된 메모리에 접근하는 것을 방지해주기도 함
+- 페이지 폴트 처리 지원
+
+<br><br><br>
+
 ### 페이징에서의 주소 변환
 
 - 특정 주소에 접근하고자 한다면 어떤 정보가 필요할까?
