--- a/네트워크/네트워크 참조 모델.md
+++ b/네트워크/네트워크 참조 모델.md
@@ -7,13 +7,23 @@
 
 ### OSI 7계층
 
-- 물리 : 비트를 실질적으로 전기 신호로 바꿔서 전송하는 계층 ex) 전선
-- 데이터링크 : Link To Link로 데이터가 잘 전송되었는 지 확인하는 계층. 패리티 비트 및 해밍 코드 등을 통해서 데이터가 온전히 왔는 지 체크도 가능 프레임을 사용 ex) LAN, 스위치
+- 물리 : 비트를 실질적으로 전기 신호로 바꿔서 전송하는 계층 ex) 허브, 리피터, 모뎀, 케이블
+- 데이터링크 : Link To Link로 데이터가 잘 전송되었는 지 확인하는 계층. 패리티 비트 및 해밍 코드 등을 통해서 데이터가 온전히 왔는 지 체크도 가능 프레임을 사용 ex) LAN, 스위치, 브리지
 - 네트워크 : Edge to Edge로 데이터가 전송될 수 있게 라우팅을 해주는 계층. 패킷을 사용 ex) IP, 라우터
 - 전송 : 데이터의 혼잡 제어 및 흐름 제어, 신뢰성을 높이는 등을 담당. ex) TCP, UDP
 - 세션 : 통신을 주고받는 호스트의 응용 프로그램 간 연결 상태를 관리
-- 표현 : 문자를 컴퓨터가 이해할 수 있는 코드로 변환하거나, 압축, SSL이나 TLS과 같은 암호화를 하는 계층
-- 응용 : 응용 프로그램에 대한 다양한 네트워크 서비스
+- 표현 : 문자를 컴퓨터가 이해할 수 있는 코드로 변환하거나, 압축, SSL이나 TLS과 같은 암호화를 하는 계층 ex) ASCII, UTF, SSL, TLS
+- 응용 : 응용 프로그램에 대한 다양한 네트워크 서비스 ex) HTTP, FTP, SMTP, DNS
+
+<br><br><br>
+
+### OSI 7계층 전송단위
+
+- 세션 ~ 응용 : 데이터
+- 전송 : TCP(세그먼트), UDP(데이터그램)
+- 네트워크 : 패킷
+- 데이터링크 : 프레임
+- 물리 : 비트
 
 <br><br><br>
 
