커널 모드 내용 추가

--- a/운영체제/시스템 호출.md
+++ b/운영체제/시스템 호출.md
@@ -13,6 +13,13 @@
 - 운영체제 서비스를 제공받을 수 있는 모드
 - 자원 접근 가능
 
+#### 사용자 모드 _(유저 모드)_ 와 커널 모드를 구분하는 이유?
+
+- 어떤 프로세스든 간에, 함부로 커널 영역에 접근하지 못하도록 막아두는 것
+- 각 프로세스에게 할당된 메모리마다 유저 모드 공간과 커널 모드 공간이 할당됨
+- 이 때 할당되는 커널 모드 공간은 모든 프로세스에서 공유되는 공간임
+- 즉, 커널 함수를 호출하려고 할 때 커널 모드로 전환한 뒤 호출해야 하며, 커널 모드에서는 보안을 강화하는 등의 행동을 함
+- 커널 스택은 각 프로세스 _(스레드)_ 마다 따로 할당되는데, 커널이 공유되는 공간이라고 하더라도 호출되는 프로세스 컨텍스트는 유지하고 있으므로 돌아갈 때 안전하게 돌아갈 수 있음
 
 <br><br><br>
 
