--- a/Java/기타.md
+++ b/Java/기타.md
@@ -38,3 +38,13 @@
 `11 -> 23 -> 47 -> 95...`
 - HashMap의 경우 기본 크기가 16이며, Load FActor가 0.75를 넘어갈 때마다 *2를 수행함
 `16 -> 32 -> 64 -> 128...`
+
+<br><br><br>
+
+### Synchronized, Volatile
+
+- Synchronzied는 Java에서 Mutex를 지원해주기 위해서 사용하는 Monitor 기능
+- Synchronized로 되어있는 메소드에 들어갈 때 lock을 걸고 모두 수행했을경우 unlock을 수행
+- Volatile는 케시된 데이터를 사용하는 것이 아니라 메모리 데이터를 사용함으로써 메모리 가시성을 보장받을 수 있게 하는 방법
+- Volatile을 사용한다고 동기화를 지원해주는 것이 아님
+- Volatile를 사용하면서 Synchorized나 Lock을 사용하지 않고 Thread Safe하게 사용하는 방법은 CAS 연산을 사용하는 방법임
