오탈자 수정

--- a/운영체제/메모리.md
+++ b/운영체제/메모리.md
@@ -93,7 +93,7 @@
 
 - Memory Management Unit
 - 가상 메모리를 물리 메모리로 변경해주는 하드웨어 장치
-- CPU와 RAM사이에 위치, 내부적으로 PTBR과 TLB를 활용하여 가상 메모리를 물리 메모리로 매핑
+- CPU와 RAM사이에 위치, 내부적으로 TLB를 활용하여 가상 메모리를 물리 메모리로 매핑 _(PTBR은 MMU내부에 있는 것이 아니라 CPU에 있음)_
 - 프로세스가 잘못된 메모리에 접근하는 것을 방지해주기도 함
 - 페이지 폴트를 탐지하고, 탐지되었다면 OS가 이를 처리
 
