--- a/Java/기타.md
+++ b/Java/기타.md
@@ -36,7 +36,7 @@
 - 자바에서는 기본적으로 부하율이 0.75를 넘으면 Hash Table의 크기를 2배로 증가시킴
 - HashTable의 경우 기본 크기가 11이며, Load Factor가 0.75를 넘어갈 때마다 *2 +1을 수행함
 `11 -> 23 -> 47 -> 95...`
-- HashMap의 경우 기본 크기가 16이며, Load FActor가 0.75를 넘어갈 때마다 *2를 수행함
+- HashMap의 경우 기본 크기가 16이며, Load Factor가 0.75를 넘어갈 때마다 *2를 수행함
 `16 -> 32 -> 64 -> 128...`
 
 <br><br><br>
