RB트리, AVL트리 차이 추가

--- a/자료구조/이진 트리.md
+++ b/자료구조/이진 트리.md
@@ -29,3 +29,7 @@
 - Balance Factor란 (왼쪽 서브 트리의 높이 - 오른쪽 서브 트리의 높이)를 뜻함
 - AVL트리는 모든 노드에 대해서 BF는 {-1, 0, +1} 중 하나의 값을 가짐
 - 균형이 망가진 노드를 기준으로 왼쪽에 왼쪽 서브 트리의 가중치가 높으면 LL Rotation, 왼쪽의 오른쪽이면 LR Rotation 등으로 해결함
+
+<br><br><br>
+
+![alt text](resource/image-2.png)
