--- a/자료구조/리스트.md
+++ b/자료구조/리스트.md
@@ -15,7 +15,7 @@
 - 특정 값이 있는 지 없는 지 판단할 때에는 해당 값이 나올 떄 까지 0번 인덱스부터 마지막 인덱스 까지 탐색해야 함. O(N)
 - 내부적으로 배열로 구현되어 있기 때문에, 배열이 가득 찰 경우 자바는 기본 크기가 10, 가득 찰 때마다 1.5배의 크기로 확장해서 데이터를 옮김.
 
-![alt text](resource/image-4.png)
+<img width="400" src="resource/image-4.png" />  
 
 - [배열 확장 레퍼런스](https://chunsubyeong.tistory.com/82)
 
@@ -30,19 +30,20 @@
 - 만약 Tail이 없었다면, 값을 삽입하는 과정에서 반드시 Head로 부터 마지막 까지 탐색해야 하기 때문에 Tail 포인터를 둠으로써 시간 비용을 최적화 함.
 - 특정 값이 있는 지 없는 지 판단할 때에는 해당 값이 나올 떄 까지 0번 인덱스부터 마지막 인덱스 까지 탐색해야 함. O(N)
 
-![alt text](resource/image-3.png)
+<img width="400" src="resource/image-3.png" />  
 
 <br><br><br>
 
 ### ArrayList vs LinkedList
 
-                    ArrayList                                  LinkedList
-- 구현               배열(Array) 사용                             노드를 연결
-- 데이터 접근 시간      연속된 메모리, 인덱스 접근 O(1)                  위치에 따라 Head에서 부터 순차 접근
-- 삽입 / 삭제 시간     삽입, 삭제 자체는 O(1), 데이터 이동 생기면 O(N)     삽입/삭제 하려는 위치까지 이동하는데 시간이 생김, 삽입/삭제 자체는 O(1)
-- 리스트 크기 확장      배열 확장이 필요한 경우 새로운 배열에 데이터 복사 시간  Tail이나 특정 인덱스에 값을 삽입만 하면 되므로 추가 시간 X
-- 검색               최악의 경우 O(N)                              최악의 경우 O(N)
-- CPU Cache         데이터가 메모리에 순차적으로 있기 때문에 유리         데이터가 산재되어있기 때문에 CPU Cache에 불리
+| 항목               | **ArrayList**                        | **LinkedList**                       |
+| ---------------- | ------------------------------------ | ------------------------------------ |
+| **구현 방식**        | 배열(`Array`) 기반                       | 노드(Node) 기반                          |
+| **데이터 접근 시간**    | 인덱스 접근 O(1), 연속된 메모리 배치              | 인덱스 접근 O(N), Head부터 순차 탐색            |
+| **삽입 / 삭제 시간**   | 끝에 추가 O(1), 중간 삽입/삭제 시 데이터 이동 → O(N) | 탐색 시간 O(N) + 삽입/삭제 자체는 포인터 변경으로 O(1) |
+| **리스트 크기 확장**    | 배열이 꽉 차면 새 배열 생성 후 복사 (1.5배 확장)      | 포인터만 연결하므로 확장 시 추가 비용 거의 없음          |
+| **검색 성능**        | 최악의 경우 O(N)                          | 최악의 경우 O(N)                          |
+| **CPU Cache 효율** | 메모리 상 인접 → 캐시 히트율 높음                 | 비연속적 포인터 구조 → 캐시 미스 빈번               |
 
 <br>
 
