--- a/자료구조/해쉬, 맵, 셋.md
+++ b/자료구조/해쉬, 맵, 셋.md
@@ -1,3 +1,20 @@
+### Map
+
+- Key - Value 쌍을 저장하는 자료구조
+- 같은 Key를 가지는 Pair는 최대 한개만 존재 가능
+- Dictionary, Associative Array 라고 부르기도 함
+
+<br><br><br>
+
+### Hash Table
+
+- 배열과 해쉬 함수를 사용하여 Map을 구현한 자료구조
+- 일반적으로 상수시간으로 접근하기 때문에 빠름
+- 해쉬란, 임의의 크기를 가지는 타입의 데이터를 고정된 크기를 가지는 타입의 데이터로 변환하는 함수
+- Hash Table에서는 임의의 데이터를 임의의 정수로 바꿔서 인덱스로 사용함.
+
+<br><br><br>
+
 ### 해쉬 충돌 해결 방법
 
 #### Seperate Chaining
@@ -31,3 +48,24 @@
 `11 -> 23 -> 47 -> 95...`
 - HashMap의 경우 기본 크기가 16이며, Load Factor가 0.75를 넘어갈 때마다 *2를 수행함
 `16 -> 32 -> 64 -> 128...`
+
+<br><br><br>
+
+### Set
+
+- 데이터를 저장하는 추상 자료형
+- 데이터의 순서를 보장하지 않음
+- 데이터의 중복을 허용하지 않음
+- 데이터의 조회 속도가 O(1)임
+- 중복된 데이터를 제거할 때 좋음
+- 특정 값이 있는 지 판단할 때 좋음 _(Map의 경우 Key는 O(1)로 조회 가능하지만, Value는 모두 탐색해야 함. Set은 Value를 O(1)로 조회)_
+
+<br><br><br>
+
+### Hash Set
+
+- 해쉬 테이블을 이용해서 Set을 구현
+- 자바에서는 HashMap으로 구현, Value 자리에 Null을 대입
+- 확인할 때에는 해당 Key 값이 있는 지 없는 지만 체크
+
+<img width="500" src="resource/image-5.png" />
