JVM 작업 메모리 내용 추가

--- a/Java/기타.md
+++ b/Java/기타.md
@@ -48,3 +48,20 @@
 - Volatile는 케시된 데이터를 사용하는 것이 아니라 메모리 데이터를 사용함으로써 메모리 가시성을 보장받을 수 있게 하는 방법
 - Volatile을 사용한다고 동기화를 지원해주는 것이 아님
 - Volatile를 사용하면서 Synchorized나 Lock을 사용하지 않고 Thread Safe하게 사용하는 방법은 CAS 연산을 사용하는 방법임
+- 자바의 경우 각 스레드마다 메인 메모리의 데이터를 케싱해놓는 작업 메모리가 존재, 그렇기 때문에 Synchronized나 Volatile를 사용하면 메모리 가시성을 보장받을 수 있음.
+
+- [레퍼런스 1](https://javachoi.tistory.com/185)
+- [레퍼런스 2](https://www.youtube.com/watch?v=LPKWkILzk6A)
+
+<img width="500" src="resource/image-4.png" />
+
+<br><br><br>
+
+### Java의 Integer 케싱
+
+- 자바의 경우 -128~127의 값은 케싱되기 때문에 똑같은 주소를 가르킴.
+- 반면, 그 외의 값을 == 연산 _(주소가 같은지 판단하는 연산)_ 을 사용하게 되면 false를 반환함.
+
+- [레퍼런스](https://www.youtube.com/watch?v=niA2j_6CFIY&list=PLcXyemr8ZeoQRLFPZz3YKfudotIe-ZJFA&index=3)
+
+<img width="500" src="resource/image-3.png" />
