정렬 알고리즘 공간 복잡도 수정

--- a/자료구조/정렬.md
+++ b/자료구조/정렬.md
@@ -7,7 +7,7 @@
 #### 복잡도 
 
 - 시간 복잡도 : 최선의 경우에도 입력 리스트에서 Full Scan을 해야하므로 항상 O(n^2)
-- 공간 복잡도 : O(n)
+- 공간 복잡도 : O(1)
 
 <br><br><br>
 
@@ -20,7 +20,7 @@
 #### 복잡도 
 
 - 시간 복잡도 : 최선 _(모두 정렬 되어있었을 경우)_ O(n) 최악 : O(n^2) 평균적으로 O(n^2)임
-- 공간 복잡도 : O(n)
+- 공간 복잡도 : O(1)
 
 <br><br><br>
 
@@ -33,7 +33,7 @@
 #### 복잡도
 
 - 시간 복잡도 : 항상 O(n^2)
-- 공간 복잡도 : O(n) _(하나의 배열로 가능)_
+- 공간 복잡도 : O(1) 
 
 <br><br><br>
 
@@ -42,7 +42,7 @@
 - 힙을 만들어서 최소 혹은 최대값을 하나씩 추출하는 방법
 
 - 시간 복잡도 : 항상 O(nlogn)
-- 공간 복잡도 : 항상 O(n)
+- 공간 복잡도 : O(1)
 
 <br><br><br>
 
@@ -51,7 +51,7 @@
 - 분할 정복을 이용해서 n, n/2, n/4, n/8... 로 분리하면서 정렬한 것을 합쳐나가면서 정렬하는 방법
 
 - 시간 복잡도 : 항상 O(nlogn)
-- 공간 복잡도 : O(2n)
+- 공간 복잡도 : O(n)
 
 <br><br><br>
 
@@ -61,7 +61,7 @@
 - 이를 계속 반복
 
 - 시간 복잡도 : 최악 : O(n^2) _(피봇을 잘못 선택해서 왼쪽이나 오른쪽에 편향되었을 경우)_ 최선 : O(nlogn)
-- 공간 복잡도 : O(n)
+- 공간 복잡도 : O(logn)
 
 <br><br><br>
 
