안드로이드 빌드 프로세스 추가

--- a/Android/기타.md
+++ b/Android/기타.md
@@ -566,13 +566,20 @@ fun searchWithBody(@Body request: SearchRequest): Response<T>
 
 <br><br><br>
 
-### 안드로이드 플랫폼 아키텍처
+### 안드로이드 빌드 프로세스
 
-- 리눅스 커널 기반 운영 체제
-- 하드웨어 추상화 계층
-- 안드로이드 런타임, 코어 라이브러리
-- 네이티브 메서드, 네이티브 모듈
-- 자바 프레임워크 API
-- 어플리케이션
+<img src="resource/image-9.png" width="500"/>
 
-// 여기 작성해야함
+<br>
+
+1. 코드를 자바 컴파일러, 코틀린 컴파일러로 클래스 파일 (.class) 로 변환
+2. debug모드라면 최적화를 진행하지 않고 dex파일로 변환 및 릴리즈 모드라면 Proguard가 포함된 R8로 최적화
+3. 릴리즈 모드였을 때 최적화된 클래스 파일을 dex로 변환
+4. Android 7 이후로는 여기서 유휴시간에 ART는 dex2oat를 통해 dex를 oat로 사전에 컴파일시켜 놓아서 실행 속도를 최적화시킴
+
+<br>
+
+<img src="resource/image-10.png" width="500"/>
+
+- Android 4까지는 JIT만 사용, Android 5~6은 ART만 사용, 7부터 JIT + ART
+- Compose 컴파일러의 경우 코틀린 컴파일러에 내장되는 기능이므로 클래스 파일을 생성할 때 @Composable 어노테이션을 보고 Composer, dirty 파라미터들을 주입
