최적화, Proguard, D8, R8 내용 추가

--- a/Android/기타.md
+++ b/Android/기타.md
@@ -583,3 +583,35 @@ fun searchWithBody(@Body request: SearchRequest): Response<T>
 
 - Android 4까지는 JIT만 사용, Android 5~6은 ART만 사용, 7부터 JIT + ART
 - Compose 컴파일러의 경우 코틀린 컴파일러에 내장되는 기능이므로 클래스 파일을 생성할 때 @Composable 어노테이션을 보고 Composer, dirty 파라미터들을 주입
+
+<br><br><br>
+
+### 최적화, Proguard 및 R8
+
+- Code shrinking : 소스 코드나 라이브러리의 코드에서 실제로 사용되지 않는 코드들을 제거
+- Resource shrinking : 사용되지 않는 리소스들을 제거.
+- Obfuscation : 난독화를 진행하여 클래스, 메소드 등의 코드 물리량을 압축시킴
+- Optimization : 코드를 분석하여 사용되지 않는 분기문 제거, 함수 호출이 적은 곳에서만 이뤄질 경우 inline으로 대체, 클래스가 인스턴스화가 되지 않을경우 클래스 제거 및 결합 등을 진행
+
+<br>
+
+- 클래스 파일로 컴파일 이후 Java 8이상의 기능을 지원하기 위해, 이전 버전의 안드로이드에서는 사용할수 없었던 새로운 자바 기능을 대체하거나 변환하는 과정인 Desugar가 추가됨
+- 그렇기 때문에 가장 초창기 최적화인 Proguard과정은 Desugar이후 진행되기에 빌드가 더 길어졌었음.
+
+<br>
+
+<img src="resource/image-11.png" width="500"/>
+
+<br>
+
+- 위 문제를 해결하기 위해 Android Studio 3.2부터는 Dex 컴파일러를 D8이라는 컴파일러로 대체하였음
+- 이는 클래스파일을 Dex파일로 변환하는 과정에서 디슈거링 변환을 함께해서 빌드 시간을 더 빠르게 만드는 것
+- 즉, 이전에는 순차적으로 진행되었지만 D8 부터는 class2dex와 디슈거링이 동시에 진행되어 더 빨라짐
+
+<img src="resource/image-12.png" width="500"/>
+
+<br>
+
+- 여기서 더 나아가서 R8은 D8의 베이스로 만들어진 것이며 Proguard 과정을 포함한다.
+- 이에 더 나아가서 기존 Proguard는 단편화 문제가 있었는데, 이를 해결해주었다. _(디바이스 제조사, 모델, 버전등에 의해 개발자들이 너무 귀찮았음)_
+- 앱에서 특정 디바이스나 API 레벨을 지원하기 위해 필요한 코드만 남기고 dex를 최적화시켜주는 기능이 추가됨
