JAR, AAR, DEX, APK, AAB 내용 추가

--- a/Android/기타.md
+++ b/Android/기타.md
@@ -586,7 +586,7 @@ fun searchWithBody(@Body request: SearchRequest): Response<T>
 
 <br><br><br>
 
-### 최적화, Proguard 및 R8
+### 최적화, Proguard, D8 및 R8
 
 - Code shrinking : 소스 코드나 라이브러리의 코드에서 실제로 사용되지 않는 코드들을 제거
 - Resource shrinking : 사용되지 않는 리소스들을 제거.
@@ -615,3 +615,35 @@ fun searchWithBody(@Body request: SearchRequest): Response<T>
 - 여기서 더 나아가서 R8은 D8의 베이스로 만들어진 것이며 Proguard 과정을 포함한다.
 - 이에 더 나아가서 기존 Proguard는 단편화 문제가 있었는데, 이를 해결해주었다. _(디바이스 제조사, 모델, 버전등에 의해 개발자들이 너무 귀찮았음)_
 - 앱에서 특정 디바이스나 API 레벨을 지원하기 위해 필요한 코드만 남기고 dex를 최적화시켜주는 기능이 추가됨
+
+<br><br><br>
+
+### JAR, AAR, DEX, APK, AAB
+
+- JAR : Java 언어로 작성된 코드와 관련된 리소스를 포함하는 압축 파일 형식
+
+```kotlin
+dependencies {
+    // 로컬 .jar 라이브러리 추가
+    implementation(fileTree(mapOf("dir" to "libs", "include" to listOf("*.jar"))))
+
+    // 외부 라이브러리 추가 -> 외부 .jar을 다운받아서 추가합니다.
+    implementation("com.example.android:app-magic:12.3")
+}
+```
+
+- AAR : 안드로이드 라이브러리를 더 효과적으로 관리하기 위해 구글이 도입한 새로운 라이브러리 형식. JAR와 유사하지만, 안드로이드 기능을 지원하는 라이브러리를 더 손쉽게 관리 가능
+- DEX :
+1. APK 파일을 만들 때 개발자가 작성한 코드를 컴파일하여 클래스 파일이 생성됨
+2. 이 클래스 파일은 자바 바이트 코드라고 생각하면 됨
+3. 이 클래스 파일들을 하나로 합쳐서 dex 파일이 생성됨
+4. 변환된 dex파일과 여러 리소스들을 합쳐서 apk파일이 생성됨
+
+<br>
+
+<img src="resource/image-13.png" width="500"/>
+
+<br>
+
+- APK : 안드로이드 플랫폼에 앱을 배포할 수 있는 파일. 컴파일된 클래스는 dex파일의 형태로 포함되고 AndroidManifest.xml과 리소스와 같은 파일들이 포함됨
+- AAB : 기존 APK는 모든 기기/화면 크기/CPU 아키텍처/언어/리소스 등을 포함했기 때문에, APK크기가 커졌음. 이 때 사용자는 자기 기기에 필요 없는 리소스까지 다운로드 해야했는데, AAB라는 것을 만들어 사용자에게 필요한 파일만 포함된 apk를 다운받을 수 있도록 해주는 마스터 패키지임
